--- a/Activity_1_Python_Fundamentals.ipynb
+++ b/Activity_1_Python_Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Activity_1 - Python Fundamentals",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPpa3Lh5dl/hojMKWpxgxHC",
+      "authorship_tag": "ABX9TyNK924KJ9hEu9zfuDpcOxNw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,7 @@
       "metadata": {
         "id": "Czp0sX-nAOy_"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
         "id": "avGcBa6WBFc3",
         "outputId": "f06a6761-765c-4811-f02b-95c6661dbade"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -140,7 +140,7 @@
         "id": "6ZX7MCKZCJl2",
         "outputId": "60e55a67-9237-4793-bc93-a3328a5cfd56"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -180,7 +180,7 @@
       "metadata": {
         "id": "bsdvyPg-C_hV"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -223,7 +223,7 @@
         "id": "Vz8ShYUPEg-G",
         "outputId": "f1300313-2c42-4e46-d2d2-05b2fbaf2002"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -277,7 +277,7 @@
         "id": "T6pIPEzQFTvv",
         "outputId": "2be5345b-5dc1-4878-96e8-702d9198c5ee"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -321,7 +321,7 @@
       "metadata": {
         "id": "ohSjOgaDIfu7"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -390,7 +390,7 @@
       "metadata": {
         "id": "do0RQ6P0LY6U"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -429,7 +429,7 @@
       "metadata": {
         "id": "2Yvyca-PLzng"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -554,7 +554,7 @@
       "metadata": {
         "id": "9VxpK-2fPEFz"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -595,7 +595,7 @@
         "id": "f_tldPkPP-cZ",
         "outputId": "f801bd50-4972-4f53-dd46-47f1aa746bab"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -616,25 +616,315 @@
         "\\n\\t{:.2%} for Finals.\". format(w_pg, w_mg, w_fg))"
       ],
       "metadata": {
+        "id": "7n2O2bBSQiF1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = input (\"enter a number: \")\n",
+        "x"
+      ],
+      "metadata": {
+        "id": "lkORtbQK_Sr8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name = input(\"Kimi no nawa: \")\n",
+        "pg = input(\"Enter prelim grade: \")\n",
+        "mg = input(\"Enter midterm grade: \")\n",
+        "fg = input(\"Enter final grade: \")\n",
+        "sem_grade = None \n",
+        "print(\"Hello {}, your semestral grade is: {}\".format(name, sem_grade))"
+      ],
+      "metadata": {
+        "id": "C3gWYStc_jOF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Looping Statements\n"
+      ],
+      "metadata": {
+        "id": "oS9nmBT-DoNA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##While\n"
+      ],
+      "metadata": {
+        "id": "J4PRLigFDsss"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "##While loops \n",
+        "i, j = 0, 10\n",
+        "while(i<=j):\n",
+        "    print(f\"{i}\\t|\\t{j}\")\n",
+        "    i+=1"
+      ],
+      "metadata": {
+        "id": "ytgX1Fx2Dupj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##For"
+      ],
+      "metadata": {
+        "id": "PicH5Y01FfbG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# for(int i=0; i<10; i++){\n",
+        "# printf(i)\n",
+        "# }\n",
+        "\n",
+        "i=0\n",
+        "for i in range(10):\n",
+        "    print(i)"
+      ],
+      "metadata": {
+        "id": "9P99CQzAFgiC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "playlist = [\"Shake it off\", \"Blank space\", \"I did something bad\"]\n",
+        "print('Now Playing:\\n')\n",
+        "for song in playlist:\n",
+        "    print(song) "
+      ],
+      "metadata": {
+        "id": "234_dVrdHLey"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Flow Control"
+      ],
+      "metadata": {
+        "id": "2dzPafO1IHC6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Condition Statements"
+      ],
+      "metadata": {
+        "id": "6zHv5gDGIJPj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numeral1, numeral2 = 12, 11\n",
+        "if(numeral1 == numeral2):\n",
+        "    print(\"Yey\")\n",
+        "elif(numeral1>numeral2):\n",
+        "    print(\"Hoho\")\n",
+        "else:\n",
+        "    print(\"Aww\")"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "7n2O2bBSQiF1",
-        "outputId": "178fda8f-937a-4c24-ac19-b3ba5c7743ae"
+        "id": "CXLzkwdBILRg",
+        "outputId": "27f27fee-21f0-4952-d96f-dc74cdea2b40"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The weights of your semestral grades are:\n",
-            "\t30.00% for Prelims\n",
-            "\t30.00% for Midterms, and\n",
-            "\t40.00% for Finals.\n"
+            "Hoho\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Functions"
+      ],
+      "metadata": {
+        "id": "gdQFXs-JJFvZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# void DeleteUser(int userid){\n",
+        "#     delete(userid);\n",
+        "#}\n",
+        "\n",
+        "def delete_user (userid):\n",
+        "    print(\"Successfully deleted user: {}\".format(userid))\n",
+        "  \n",
+        "def delete_all_users ():\n",
+        "    print(\"Successfully deleted all users\")"
+      ],
+      "metadata": {
+        "id": "APcz-gH1JK9h"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "userid = 202012192\n",
+        "delete_user(202012192)\n",
+        "delete_all_users()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uaXF3shbKYgD",
+        "outputId": "8f77c3d2-e078-481b-e483-11e3df616bca"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Successfully deleted user: 202012192\n",
+            "Successfully deleted all users\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def add(addend1, addend2):\n",
+        "    print(\"yehey\")\n",
+        "    return addend1 + addend2\n",
+        "\n",
+        "def power_of_base2(exponent):\n",
+        "    return 2**exponent\n",
+        "  \n",
+        "addend1 = 5\n",
+        "addend2 = 10\n",
+        "\n",
+        "exponent = 5\n",
+        "\n",
+        "#add(addend1, addend2)\n",
+        "power_of_base2(exponent)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jy1UFmC4KgV7",
+        "outputId": "2c283e9d-0008-48da-c7fa-f78dac24c86d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "32"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "add(addend1, addend2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fHlg7MOYNpWq",
+        "outputId": "4f928ca8-fe20-4680-b5df-f183c2c05dc3"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "yehey\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Lambda Functions"
+      ],
+      "metadata": {
+        "id": "fj-SKQYgMdLk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 4"
+      ],
+      "metadata": {
+        "id": "zLKA9TiKMgKI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "ZXH1NFpHM7DM"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
