--- a/Activity_1_Python_Fundamentals.ipynb
+++ b/Activity_1_Python_Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Activity_1 - Python Fundamentals",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNK924KJ9hEu9zfuDpcOxNw",
+      "authorship_tag": "ABX9TyOViP27852hPhFIXsRhW/bW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -925,6 +925,67 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Calculator"
+      ],
+      "metadata": {
+        "id": "4Bg-IrZodY_8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print()\n",
+        "name = input('\\tName: ');\n",
+        "course = input('\\tCourse: ');\n",
+        "prelim = float(input('\\tPrelim grade: '));\n",
+        "midterm = float(input('\\tMidterm grade: '));\n",
+        "final = float(input('\\tFinal grade: '));\n",
+        "sem_grade = (prelim*0.30) + (midterm*.30) + (final*.40);\n",
+        "\n",
+        "sem_grade = \"{:.2f}\".format(sem_grade)\n",
+        "print();\n",
+        "print(\"\\tResult\");\n",
+        "print();\n",
+        "print(\"\\t\",name, \", a\", course, \"student\");\n",
+        "if float(sem_grade) > 70.00:\n",
+        "  print(\"\\tYour grade is\", sem_grade, \"\\U0001F600\");\n",
+        "elif float(sem_grade) == 70:\n",
+        "  print(\"\\tYour grade is\", sem_grade, \"\\U0001F606\");\n",
+        "elif float(sem_grade) < 70:\n",
+        "  print(\"\\tYour grade is\", sem_grade, \"\\U0001F62D\")\n",
+        "  print();"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EFYucCL6de0h",
+        "outputId": "a8239acf-c975-429c-abea-e8dd3dbee0ac"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "\tName: Princess\n",
+            "\tCourse: Chemical Enginerring\n",
+            "\tPrelim grade: 100\n",
+            "\tMidterm grade: 100\n",
+            "\tFinal grade: 100\n",
+            "\n",
+            "\tResult\n",
+            "\n",
+            "\t Princess , a Chemical Enginerring student\n",
+            "\tYour grade is 100.00 😀\n"
+          ]
+        }
+      ]
     }
   ]
 }
