--- a/Activity_1_Python_Fundamentals.ipynb
+++ b/Activity_1_Python_Fundamentals.ipynb
@@ -964,9 +964,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EFYucCL6de0h",
-        "outputId": "a8239acf-c975-429c-abea-e8dd3dbee0ac"
+        "outputId": "ba3c6047-7813-46e7-d6f6-f636afbfa7bc"
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -974,14 +974,14 @@
           "text": [
             "\n",
             "\tName: Princess\n",
-            "\tCourse: Chemical Enginerring\n",
+            "\tCourse: Chemical Engineering\n",
             "\tPrelim grade: 100\n",
             "\tMidterm grade: 100\n",
             "\tFinal grade: 100\n",
             "\n",
             "\tResult\n",
             "\n",
-            "\t Princess , a Chemical Enginerring student\n",
+            "\t Princess , a Chemical Engineering student\n",
             "\tYour grade is 100.00 😀\n"
           ]
         }
