--- a/Activity_1_Python_Fundamentals.ipynb
+++ b/Activity_1_Python_Fundamentals.ipynb
@@ -5,8 +5,10 @@
     "colab": {
       "name": "Activity_1 - Python Fundamentals",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOViP27852hPhFIXsRhW/bW",
+      "collapsed_sections": [
+        "PaadofN4CiHv"
+      ],
+      "authorship_tag": "ABX9TyNFvhtRdE3VxSLj2Eog98Gm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +49,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Variable and Data Types"
+        "## Variable and Data Types\n",
+        "\n",
+        "Variable is basically a memory location where you can input or store values. \n",
+        "In short, you are just reserving memory space by creating a variable. On the other hand, the data that will be stored by the variable consist of 5 types: Numbers, String, List, Tuple, and Dictionary.\n"
       ],
       "metadata": {
         "id": "4CEA_969AGSr"
@@ -157,7 +162,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Operations"
+        "##Operations\n",
+        "\n",
+        "Operations or operators in python are used for computations, it may be arithmetic or logical computation. An operand is the value of the operator that it operates. Different types of operators are used to perform the calculator activity. Arithmetic, assignment operations, comparators, logical, and input or output are the different types of operations."
       ],
       "metadata": {
         "id": "PaadofN4CiHv"
@@ -541,10 +548,22 @@
         "print(\"Hello World\") "
       ],
       "metadata": {
-        "id": "G1VnLiWyO8tq"
+        "id": "G1VnLiWyO8tq",
+        "outputId": "69c5499b-7881-4911-8345-ee3bb4892f70",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello World\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -565,10 +584,22 @@
         "cnt+= 1"
       ],
       "metadata": {
-        "id": "4RYSsGEhPGdQ"
+        "id": "4RYSsGEhPGdQ",
+        "outputId": "09de6a41-4043-4d50-9cc4-a30182fb64b3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello World , Current run count is: 1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -576,10 +607,22 @@
         "print(f\"{string}, Current count is: {cnt}\")"
       ],
       "metadata": {
-        "id": "5huVZTSHPYz8"
+        "id": "5huVZTSHPYz8",
+        "outputId": "294b937e-8a3c-48f7-d7c3-1610107486d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello World, Current count is: 2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -593,7 +636,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f_tldPkPP-cZ",
-        "outputId": "f801bd50-4972-4f53-dd46-47f1aa746bab"
+        "outputId": "fa8d41b0-f153-4fc5-cb31-8f859f938644"
       },
       "execution_count": null,
       "outputs": [
@@ -616,10 +659,25 @@
         "\\n\\t{:.2%} for Finals.\". format(w_pg, w_mg, w_fg))"
       ],
       "metadata": {
-        "id": "7n2O2bBSQiF1"
+        "id": "7n2O2bBSQiF1",
+        "outputId": "416bbcbd-02a2-4805-a33f-4add7a1105b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The weights of your semestral grades are:\n",
+            "\t30.00% for Prelims\n",
+            "\t30.00% for Midterms, and\n",
+            "\t40.00% for Finals.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -628,10 +686,39 @@
         "x"
       ],
       "metadata": {
-        "id": "lkORtbQK_Sr8"
+        "id": "lkORtbQK_Sr8",
+        "outputId": "4c1fa5b6-36b1-4d66-c05a-281ba2e5ccad",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 537
+        }
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    728\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 729\u001b[0;31m                 \u001b[0mident\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreply\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdin_socket\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    730\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/jupyter_client/session.py\u001b[0m in \u001b[0;36mrecv\u001b[0;34m(self, socket, mode, content, copy)\u001b[0m\n\u001b[1;32m    802\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 803\u001b[0;31m             \u001b[0mmsg_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv_multipart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    804\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mzmq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mZMQError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/zmq/sugar/socket.py\u001b[0m in \u001b[0;36mrecv_multipart\u001b[0;34m(self, flags, copy, track)\u001b[0m\n\u001b[1;32m    624\u001b[0m         \"\"\"\n\u001b[0;32m--> 625\u001b[0;31m         \u001b[0mparts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mflags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrack\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrack\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    626\u001b[0m         \u001b[0;31m# have first part already, only loop while more to receive\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket._recv_copy\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/zmq/backend/cython/checkrc.pxd\u001b[0m in \u001b[0;36mzmq.backend.cython.checkrc._check_rc\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: ",
+            "\nDuring handling of the above exception, another exception occurred:\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-20-f70479bfb7e4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"enter a number: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    702\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    703\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 704\u001b[0;31m             \u001b[0mpassword\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    705\u001b[0m         )\n\u001b[1;32m    706\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    732\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    733\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 734\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    735\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    736\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -652,7 +739,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Looping Statements\n"
+        "#Looping Statements\n",
+        "\n",
+        "Loops or looping are programming concept that allows us to iterate, meaning, we can execute the same block of code multiple times. There are two known types of loops; the while loop and the for loop."
       ],
       "metadata": {
         "id": "oS9nmBT-DoNA"
@@ -677,10 +766,32 @@
         "    i+=1"
       ],
       "metadata": {
-        "id": "ytgX1Fx2Dupj"
+        "id": "ytgX1Fx2Dupj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7f602aec-363f-41c7-f0e3-3825c2f677c4"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\t|\t10\n",
+            "1\t|\t10\n",
+            "2\t|\t10\n",
+            "3\t|\t10\n",
+            "4\t|\t10\n",
+            "5\t|\t10\n",
+            "6\t|\t10\n",
+            "7\t|\t10\n",
+            "8\t|\t10\n",
+            "9\t|\t10\n",
+            "10\t|\t10\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -703,10 +814,31 @@
         "    print(i)"
       ],
       "metadata": {
-        "id": "9P99CQzAFgiC"
+        "id": "9P99CQzAFgiC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "09059d77-3891-4d9e-f1a5-6298924d031e"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -717,15 +849,33 @@
         "    print(song) "
       ],
       "metadata": {
-        "id": "234_dVrdHLey"
+        "id": "234_dVrdHLey",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a4d45a49-02df-4c2e-d701-a4060ac1f1d4"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Now Playing:\n",
+            "\n",
+            "Shake it off\n",
+            "Blank space\n",
+            "I did something bad\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "#Flow Control"
+        "#Flow Control\n",
+        "\n",
+        "The order where statements or programs’ code is executed based on conditions is called Flow Control. Conditional statements are statements that act based on a certain condition of true or false. If, if-else, if-elif-else, nested if-else statements are the different types of conditional statements."
       ],
       "metadata": {
         "id": "2dzPafO1IHC6"
@@ -929,7 +1079,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Calculator"
+        "#Calculator\n",
+        "\n",
+        "The program made features the different basic fundamentals of Python learned \n",
+        "by the students. The calculator will ask you to input your name, course being taken, preliminary grade, midterm grade, and of course your final grade. It will also show you a corresponding emoji based on the average of your input grades. All the methods above, except the looping statements, are used to create this program.\n"
       ],
       "metadata": {
         "id": "4Bg-IrZodY_8"
@@ -960,32 +1113,10 @@
         "  print();"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "EFYucCL6de0h",
-        "outputId": "ba3c6047-7813-46e7-d6f6-f636afbfa7bc"
+        "id": "EFYucCL6de0h"
       },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "\tName: Princess\n",
-            "\tCourse: Chemical Engineering\n",
-            "\tPrelim grade: 100\n",
-            "\tMidterm grade: 100\n",
-            "\tFinal grade: 100\n",
-            "\n",
-            "\tResult\n",
-            "\n",
-            "\t Princess , a Chemical Engineering student\n",
-            "\tYour grade is 100.00 😀\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
